--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,78 +1,3 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
 * {
   box-sizing: border-box;
   padding: 0;
@@ -86,22 +11,157 @@ body {
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  margin: 22px;
+  color: #000;
+  background: #ffffff;
+  font-weight: 200;
 }
 
 a {
   color: inherit;
-  text-decoration: none;
+  text-decoration: underline;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 0.1em;
+  transition: text-underline-offset 0.4s ease-in;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+a:hover,
+a:focus {
+  text-underline-offset: -0.27em;
+  text-decoration-skip-ink: none;
+  transition: all 0.4s ease-out;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(10, minmax(0, 1fr));
+  grid-gap: 22px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 300;
+  line-height: 1;
+}
+
+h1 {
+  font-size: 34px;
+  margin-bottom: 30px;
+}
+
+h2 {
+  font-size: 28px;
+  margin-bottom: 20px;
+}
+
+h3 {
+  font-size: 22px;
+  margin-bottom: 16px;
+}
+
+p {
+  margin-bottom: 1.2em;
+}
+
+b,
+strong {
+  font-weight: 500;
+}
+
+s {
+  text-decoration-thickness: 1px;
+  text-underline-offset: 0.1em;
+}
+
+u {
+  text-decoration-thickness: 1px;
+  text-underline-offset: 0.1em;
+}
+
+.page-text {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.page-text .text-col-1 {
+  width: calc(30% - 15px);
+  margin-left: 11px;
+  margin-right: 11px;
+}
+
+.page-text .text-col-2 {
+  width: calc(30% - 15px);
+  margin-left: 11px;
+}
+
+.sort-view {
+  margin: 120px 0;
+}
+
+.form-filter {
+  margin-bottom: 27px;
+}
+
+.form-filter,
+.view-filter {
+  display: flex;
+  width: fit-content;
+  min-height: 27px;
+  background-color: #ededed;
+  border-radius: 14.5px;
+  padding: 1px;
+}
+
+.form-filter .radio-button,
+.view-filter .radio-button {
+  position: relative;
+  margin: 0px;
+  height: 27px;
+}
+
+.radio-button input[type="radio"] {
+  appearance: none;
+  position: absolute;
+  left: 0;
+  background-color: transparent;
+  text-align: center;
+  margin: 0;
+  width: 100%;
+  height: 27px;
+  border-radius: 13.5px;
+  transition: background-color 0.2s ease-out;
+}
+
+.radio-button input[type="radio"]:checked {
+  background-color: #fff;
+  transition: background-color 0.2s ease-out;
+}
+
+.radio-button input[type="radio"]:checked:hover {
+  background-color: rgba(255, 255, 255, 1);
+}
+
+.radio-button input[type="radio"]:hover {
+  background-color: rgba(255, 255, 255, 0.7);
+  width: 100%;
+}
+
+.radio-button label {
+  position: relative;
+  top: 2px;
+  opacity: 0.5;
+  text-align: center;
+  padding: 2px 13px;
+  vertical-align: middle;
+  cursor: pointer;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.radio-button input[type="radio"]:checked + label {
+  opacity: 1;
+  transition: opacity 0.3s ease-in-out;
 }
