--- a/components/Layout/Footer.module.css
+++ b/components/Layout/Footer.module.css
@@ -15,3 +15,18 @@
   flex-direction: column;
   align-items: flex-start;
 }
+
+@media (max-width: 768px) {
+  .footer {
+    margin-top: 104px;
+  }
+  .footer .land-acknowledgement {
+    grid-column: 1 / 6;
+  }
+  .former-name {
+    grid-column: 1 / 3;
+  }
+  .social-media {
+    grid-column: 4 / 6;
+  }
+}
